src/styles/main.scss
@import url("./ada.scss");
@import url("./tokens.scss");
@import url("./typography.scss");
@import url("./transitions.scss");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	line-height: 1.5;
	font-weight: 400;
	direction: rtl;

	color-scheme: light dark;
	color: var(--c-white);
	background-color: #242424;
	font-family: Rubik, system-ui, Helvetica, Arial, sans-serif;
	background-color: var(--c-bg);

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

